<resources>
    <string name="app_name">AndroidLife</string>
    <string name="action_settings">Settings</string>

    <string name="app_label">Save you from anything</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mvp">MvpActivity</string>
    <string name="title_activity_sqlite">SqliteActivity</string>
    <string name="activity_launch_model_label">Activity:\n1.LaunchModeActivity\n\nstart VActivity</string>
    <string name="activity_v_label">Activity:\n1.LaunchModeActivity\n2.VActivity\n\nstart SingleTaskActivity</string>
    <string name="activity_single_task_label">Activity:\n1.LaunchModeActivity\n2.VActivity\n3.SingleTaskActivity\n\nstart LActivity</string>
    <string name="activity_l_label">Activity:\n1.LaunchModeActivity\n2.VActivity\n3.SingleTaskActivity\n4.LActivity\n\nstart MActivity</string>
    <string name="activity_m_label">Activity:\n1.LaunchModeActivity\n2.VActivity\n3.SingleTaskActivity\n4.LActivity\n5.MActivity\n\nstart SingleTaskActivity:\nit will destroy:\n1.LActivity\n2.MActivity</string>

    <string name="topic_content">女の子JKタイプ。\n約165センチ。\nブラジャーA - Bカップ。\nいいえ悪い黒歴史ません。</string>
    <string name="view_omit_style_topic_content">%1$d人赞过</string>
    <string name="view_omit_style_debug_content">1w人赞过</string>
    <string name="view_omit_style_qzone_content">%1$d</string>

    <string name="topic_user_name_tv">Kaede Akatsuki</string>
    <string name="topic_user_location_tv">妖都</string>
    <string name="topic_tag_tv">KAせんせい</string>
    <string name="topic_chat_tv">评论</string>
    <string name="topic_like_tv">赞</string>
    <string name="topic_share_tv">分享</string>

    <string name="lru_cache_size_format">Size:%sMB</string>
    <string name="lru_cache_count_format">Count:%s</string>
    <string name="lru_cache_hashcode_format">Hashcode:%s</string>
    <string name="lru_cache_entry_removed_null_format">entryRemoved:</string>
    <string name="lru_cache_recent_format">Recent visit:</string>
    <string name="lru_cache_cache_data_format">Cache data:</string>
    <string name="lru_cache_entry_removed_info_format">entryRemoved:\nevicted:%1$s\nkey:%2$s\noldValue:%3$s\nnewValue:%4$s</string>
    <string name="lru_cache_get_1"><![CDATA[get <1>]]></string>
    <string name="lru_cache_get_2"><![CDATA[get <2>]]></string>
    <string name="lru_cache_get_3"><![CDATA[get <3>]]></string>
    <string name="lru_cache_put_4"><![CDATA[put <4>]]></string>
    <string name="lru_cache_clear_info">Clear Info</string>
    <string name="lru_cache_tip_text">LruCache max size : 7MB</string>
    <string name="lru_cache_picture_1"><![CDATA[<1>]]></string>
    <string name="lru_cache_picture_2"><![CDATA[<2>]]></string>
    <string name="lru_cache_picture_3"><![CDATA[<3>]]></string>
    <string name="lru_cache_picture_4"><![CDATA[<4>]]></string>
    <string name="volley_get_label_text">GET</string>
    <string name="agera_call_1">Call-1</string>
    <string name="agera_call_2">Call-2</string>
    <string name="agera_waiting_for_test">waiting for test</string>
    <string name="agera_repository_test_1">Test-1 Observable:</string>
    <string name="agera_repository_test_2">Test-2 Repository:</string>
    <string name="agera_repository_test_3">Test-3 Transform Repository:</string>
    <string name="agera_repository_test_4">Test-4 Executor Repository:</string>
    <string name="agera_repository_test_5">Test-5 Error Handling Repository:</string>
    <string name="agera_repository_test_6">Test-6 Receiver Repository:</string>
    <string name="agera_repository_test_7">Test-7 Reservoir Repository:</string>
    <string name="agera_repository_test_8">Test-8 Function Repository:</string>
    <string name="agera_click">Click</string>
    <string name="remote_views_normal">普通通知栏</string>

    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
</resources>
